@@ -1,5 +1,9 @@
 Changes with Apache 1.2b7
 
+  *) Fix handling of lang_index in is_variant_better().  This was
+     causing problems which resulted in the server sending the
+     wrong language document in some cases.
+
   *) Remove free() from clean_env() in suexec wrapper. This was nuking
      the clean environment on some systems.
 
